--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,17 +141,17 @@ a.dotted-link:hover {
 
 .header .profile-image {
   margin-right: 30px;
-  border: 5px solid #4e15b7;
+  border: 2px solidrgb(68, 25, 146);
   transition: all .8s;
 }
 
 header .profile-image:hover {
-    transform: scale(1.2) rotate(360deg);
+    transform: scale(1.2);
 }
 
 .header .profile-content .name {
-  color: #49515a;
-  font-size: 38px;
+  color:rgb(0, 0, 0);
+  font-size: 40px;
   margin-bottom: 5px;
   margin-top: 30px;
 }
