--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,6 +136,7 @@ a.dotted-link:hover {
 .header .profile-image {
   margin-right: 30px;
   border: 2px solid rgb(68, 25, 146);
+  border-radius: 50%;
   transition: all .8s;
 }
 
